adding exercises / workouts / amounts link

--- a/app/views/workouts/_form.html.erb
+++ b/app/views/workouts/_form.html.erb
@@ -5,8 +5,7 @@
 
   <div class="form-inputs">
     <%= f.input :name %>
-    <%= f.input :description %>
-    <%= f.input :exercises %>
+    <%= f.input :details %>
     <%= f.input :difficulty_level %>
     <%= f.input :avatar %>
   </div>
