--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+    <nav class="navbar-lewagon">
+    <%= link_to "Workouts", root_path, class: "navbar-brand" %>
+    </nav>
   <%= yield %>
 </body>
 
