fixing controllers and adding amounts controller

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
-  // justify-content: space-between
-  background-color: transparent;
+  justify-content: space-between;
+  background-color: #F6F5D9;
   transition: 0.5s background-color ease;
 }
 
@@ -13,5 +13,5 @@
 }
 
 .navbar-lewagon-white {
-  background-color: white;
+  background-color: #F6F5D9;
 }
