--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,8 +1,21 @@
-.home-banner {
-  background-image: url('TODO: A picture URL from unsplash.com!');
+.banner {
   background-size: cover;
-  height: 100vh;
-  color: #eee;
-  text-align: center;
-  padding-top: 40vh;
+  background-position: center;
+  padding: 25px 0; 
+}
+
+.banner h1 {
+  margin-top: 10px;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.banner p {
+  margin-top: 25px;
+  font-size: 20px;
+  color: white;
+  opacity: .7;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
