--- a/app/views/workouts/new.html.erb
+++ b/app/views/workouts/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Workout</h1>
 
-<%= render 'form', workout: @workout %>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-10 col-lg-8">
+      <%= render "form", workout: @workout  %>
+    </div>
+  </div>
+</div>
 
 <%= link_to 'Back', workouts_path %>
