fixed the workouts errors with Leo

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -6,7 +6,7 @@
 
 .banner h1 {
   margin-top: 10px;
-  color: white;
+  color: lightseagreen;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 32px;
   font-weight: bold;
@@ -15,7 +15,7 @@
 .banner p {
   margin-top: 25px;
   font-size: 20px;
-  color: white;
+  color: gray;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
