--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -13,6 +13,7 @@
       <h4 class="mt-4 mb-2">Exercises to do:</h4>
       <% if @workout.exercises.empty? %>
       <p>There are no exercises in this workout</p>
+      <%= link_to 'Add Exercise', exercises_path %>
       <% else %>
       <ul class="list-group">
         <% @workout.exercises.each do |exercise| %>
@@ -37,7 +38,7 @@
 
 
 
-<%= link_to 'Edit', edit_workout_path(@workout), class: "btn btn-success" %> |
+<%= link_to 'Edit', edit_workout_path(@workout) %> |
 <%= link_to 'Back', workouts_path %>
 
 
