--- a/app/views/workouts/_banner.html.erb
+++ b/app/views/workouts/_banner.html.erb
@@ -1,11 +1,12 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)); url(/app/assets/images/man-working-out-2294361.jpg)">
+<div class="banner" style="background-image: url(/app/assets/images/man-working-out-2294361.jpg)">
   <div class="container">
     <p>
       <span id="banner-typed-text"></span>
+      <h1>Create your own workout regimen</h1>
     </p>
-    <iframe src="https://giphy.com/embed/10l2FXjFq1rXKU" width="480" height="222" frameBorder="0"
+    <span><iframe src="https://giphy.com/embed/10l2FXjFq1rXKU"  height="100" frameBorder="0"
           class="giphy-embed" allowFullScreen></iframe>
-        <p><a href="https://giphy.com/gifs/black-and-white-game-jump-10l2FXjFq1rXKU">via GIPHY</a></p>
-    <h1>Create your own workout regimen</h1>
+        <p><a href="https://giphy.com/gifs/black-and-white-game-jump-10l2FXjFq1rXKU"></a></p></span>
+    
   </div>
 </div>
