--- a/app/views/exercises/_banner.html.erb
+++ b/app/views/exercises/_banner.html.erb
@@ -2,8 +2,7 @@
   <div class="container">
     <p>
       <span id="banner-typed-text"></span>
-      <h1>Workouts</h1>
-      <h2>Use the exercise repository to customize and create your own workouts</h2>
+      <h1>Exercise Repository</h1>
        
     </p>
  
