--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -11,11 +11,17 @@
   font-size: 32px;
   font-weight: bold;
 }
+.banner h2 {
+  margin-top: 10px;
+  color: gray;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 16px;
+}
 
 .banner p {
   margin-top: 25px;
   font-size: 20px;
-  color: gray;
+  color: blue;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
