--- a/app/views/amounts/new.html.erb
+++ b/app/views/amounts/new.html.erb
@@ -2,5 +2,5 @@
 <%= simple_form_for [workout, amount] do |f| %>
   <%= f.association :exercise, input_html: { class: "beautiful-dropdown" }, include_hidden: false %>
   <%= f.input :description %>
-  <%= f.button :submit, class: "btn btn-primary" %>
+  <%= f.button :submit%>
 <% end %>
