--- a/app/views/exercises/_form.html.erb
+++ b/app/views/exercises/_form.html.erb
@@ -1,8 +1,8 @@
+<%= simple_form_for(@exercise) do |f| %>
+<%= f.error_notification %>
+<%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <%= simple_form_for(@exercise) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-
+<div class="container">
   <div class="form-inputs">
     <%= f.input :name %>
     <%= f.input :body_part %>
@@ -13,4 +13,6 @@
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
+</div>
+
 <% end %>
