--- a/app/views/exercises/new.html.erb
+++ b/app/views/exercises/new.html.erb
@@ -1,2 +1,12 @@
+<div class="container mt-4">
 
-<h1>test</h1>
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-10 col-lg-8">
+      <%= render "form", exercise: @exercise  %>
+    </div>
+  </div>
+</div>
+
+
+<%= link_to 'Show', @exercise %> |
+<%= link_to 'Back', exercises_path %>
