--- a/app/views/workouts/_form.html.erb
+++ b/app/views/workouts/_form.html.erb
@@ -1,16 +1,19 @@
+<%= simple_form_for(@workout) do |f| %>
+<%= f.error_notification %>
+<%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <%= simple_form_for(@workout) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+<div class="container">
+<div class="form-inputs">
+  <%= f.input :name %>
+  
+  <%= f.input :details %>
+  <%= f.input :difficulty_level %>
+  <%= f.input :exercises %>
+</div>
+<div class="form-actions">
+  <%= f.button :submit %>
+</div>
+</div>
 
-  <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :details %>
-    <%= f.input :difficulty_level %>
-     <%= f.input :exercises %>
-  </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
 <% end %>
