--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -6,13 +6,17 @@
 <div class="container">
   <div class="row">
     <% @workouts.each do |workout| %>
-      <div class="col-12 col-md-6 col-lg-4">
-        <div class="card my-4">
-        <img src="https://picsum.photos/200" class="card-img-top">
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card my-4">
         <div class="card-body">
           <h4 class="card-title"><%= link_to workout['name'], workout_path(workout['id']) %></h4>
-          <p class="card-text"><%= workout['details'] %></p>
-          <p class="card-text"><%= workout['difficulty_level'] %></p>
+          <p class="card-text">Difficulty Level: <%= workout['difficulty_level'] %></p>
+          <p class="card-text">Number of Exercises: <%= workout['exercises'] %></p>
+          <p class="card-text">Details: <%= workout['details'] %></p>
+          <div class="row">
+            <%= image_tag "https://picsum.photos/200", class: "avatar" %>
+            <p class="card-text"><%= workout['avatar'] %></p>
+          </div>
 
         </div>
       </div>
@@ -23,5 +27,3 @@
 
 
 <br>
-
-    <%# <img src= "/app/assets/images/man-working-out-2294361.jpg" alt="man working out"> %>
