--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -4,11 +4,16 @@
   <div class="row justify-content-center">
     <div class="col-12 col-md-10 col-lg-8">
       <h2><%= @workout.name %></h2>
-      <p><%= @workout.details %></p>
-      <p><%= @workout.difficulty_level %></p>
-      <p><%= @workout.equipment %></p>
+      <%= link_to 'Edit', edit_workout_path(@workout.id) %> |
+      <%= link_to 'Delete', workouts_path(@workout.destroy) %> |
+
+      <p>Details:<%= @workout.details %></p>
+      <p>Difficulty Level:<%= @workout.difficulty_level %></p>
+      <p>Equipment Needed:<%= @workout.equipment %></p>
+      <p>Equipment Needed:<%= @workout.equipment %></p>
 
       <hr>
+
 
       <h4 class="mt-4 mb-2">Exercises to do:</h4>
       <% if @workout.exercises.empty? %>
@@ -23,6 +28,36 @@
       <% end %>
 
       <hr>
+
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <h3>Exercise</h3>
+          <table class="table table-bordered">
+            <tbody>
+              <thead>
+                <th>Exercise</th>
+                <th>Description</th>
+                <th>Action</th>
+              </thead>
+              <% @workout.amounts.each do |amount| %>
+              <tr>
+                <td><%= amount.exercise.name %></td>
+                <td><%= amount.content %></td>
+                <td>
+                  <%= link_to amount_path(amount), method: :delete, data: { confirm: "Are you sure?" } do %>
+                  <i class="fa fa-trash destroy_amount"></i>
+                  <% end %>
+                </td>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+       <div class="col-sm-12 col-md-6">
+      <%# <%= render "amounts/new", workout: @workout, amount: @amount %> %>
+    </div>
+  </div>
+
       <h4 class="mt-4 mb-2">Action</h4>
       <ul class="list-group">
         <li>TEST</li>
@@ -38,8 +73,8 @@
 
 
 
-<%= link_to 'Edit', edit_workout_path(@workout) %> |
-<%= link_to 'Back', workouts_path %>
+
+
 
 
 <hr>
