--- a/app/views/exercises/_form.html.erb
+++ b/app/views/exercises/_form.html.erb
@@ -8,6 +8,8 @@
     <%= f.input :body_part %>
     <%= f.input :description %>
     <%= f.input :equipment %>
+    <%= f.input :video_url %>
+
   </div>
 
   <div class="form-actions">
