--- a/app/views/workouts/_form.html.erb
+++ b/app/views/workouts/_form.html.erb
@@ -5,10 +5,9 @@
 <div class="container">
 <div class="form-inputs">
   <%= f.input :name %>
-  
   <%= f.input :details %>
   <%= f.input :difficulty_level %>
-  <%= f.input :exercises %>
+  <%= f.input :equipment %>
 </div>
 <div class="form-actions">
   <%= f.button :submit %>
