--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -7,7 +7,7 @@
     <div class="col-12 col-md-10 col-lg-8">
       <h2><%= @exercise.name %></h2>
       <%= link_to 'Edit', edit_exercise_path(@exercise.id) %> |
-      <%= link_to 'Delete', exercises_path(@exercise.destroy) %> |
+      <%= link_to 'Delete', destroy_exercises_path(@exercise), method: :delete, data: { confirm: "Are you sure?" } %> 
 
       <p>Equipment:<%= @exercise.equipment %></p>
       <p>Body Part:<%= @exercise.body_part %></p>
