--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -9,7 +9,7 @@
     <div class="col-12 col-md-6 col-lg-4">
       <div class="card my-4">
         <div class="card-body">
-          <h4 class="card-title"><%= link_to workout['name'], workout_path(workout['id']) %></h4>
+          <h4 class="card-title"><%= link_to workout['name'], workout_path(workout) %></h4>
           <p class="card-text">Difficulty Level: <%= workout['difficulty_level'] %></p>
           <p class="card-text">Number of Exercises: <%= workout['exercises'] %></p>
           <p class="card-text">Details: <%= workout['details'] %></p>
