adding functions to create workouts and exercises

--- a/app/views/workouts/_form.html.erb
+++ b/app/views/workouts/_form.html.erb
@@ -10,7 +10,7 @@
   <%= f.input :equipment %>
 </div>
 <div class="form-actions">
-  <%= f.button :submit %>
+  <%= f.button :submit, class: "btn-outline-secondary"%>
 </div>
 </div>
 
