--- a/app/views/workouts/edit.html.erb
+++ b/app/views/workouts/edit.html.erb
@@ -10,12 +10,10 @@
           <%= f.input :name %>
           <%= f.input :details %>
           <%= f.input :difficulty_level %>
-          <%= f.input :exercises %>
-          <%= f.input :details %>
           <%= f.input :equipment %>
         </div>
         <div class="form-actions">
-          <%= f.button :submit %>
+          <%= f.button :submit, class: "btn-outline-secondary" %>
         </div>
       </div>
 
