--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -1,19 +1,17 @@
 <p id="notice"><%= notice %></p>
 
 <div class="container mt-4">
+  <h2 class="mt-4 mb-2">Workout Details:</h2>
   <h4 class="mt-4 mb-2"><%= @workout.name %></h4>
-
   <%= link_to 'Edit', edit_workout_path(@workout.id) %> |
-  <%= link_to 'Delete', destroy_workouts_path(@workout), method: :delete, data: { confirm: "Are you sure?" } %>
-
-
-  <p>Details:<%= @workout.details %></p>
-  <p>Difficulty Level:<%= @workout.difficulty_level %></p>
-  <p>Equipment Needed:<%= @workout.equipment %></p>
-
-  </ul>
-</div>
-</div>
+  <%= link_to 'Delete', destroy_workouts_path(@workout), method: :delete, data: { confirm: "Are you sure?" } %> |
+  <%= link_to 'All Workouts', workouts_path %>
+  
+  <div class="mt-4 mb-2">
+    <p>Difficulty Level: <%= @workout.difficulty_level %></p>
+    <p>Equipment: <%= @workout.equipment %></p>
+    <p>Details: <%= @workout.details %></p>
+  </div>
 </div>
 
 <hr>
@@ -27,14 +25,15 @@
     <tbody>
       <thead>
         <th>Exercise</th>
-        <th>Reps</th>
+        <%# <th>Reps</th> %>
         <th>Details</th>
         <th>Action</th>
       </thead>
+      
       <% @workout.amounts.each do |amount| %>
       <tr>
-        <td><%= amount.exercise.name %></td>
-        <td><%= amount.reps %></td>
+        <td><%=  amount.exercise.name %></td>
+        <%# <td><%= amount.reps %></td> 
         <td><%= amount.content %></td>
         <td>
           <%= link_to workout_amount_path(amount), method: :delete, data: { confirm: "Are you sure?" } do %>
@@ -57,7 +56,7 @@
   <%= f.association :exercise, input_html: { class: "beautiful-dropdown" }, include_hidden: false %>
   <%= f.input :reps  %>
   <%= f.input(:content, components: [:input], :wrapper => false, label: "Details") %>
-<br>
+  <br>
   <%= f.button :submit, "Add Exercise to Workout", class: "btn-outline-secondary"%>
   <% end %>
   <hr>
