adding authorization and authentication Pundit and Devise per the lecture

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,10 @@
 
 <body>
   <%= render "layouts/navbar" %>
+  <%= render 'shared/navbar' %>
+  <%# <%= render 'shared/flashes' %> %>
+
+
   <br>
   <div class="home-section"></div>
 <br>
